refine calibration process & detecting location according to proximities with maximum distance of 1.5m from beacon